--- a/portfolio_update_v1/index.html
+++ b/portfolio_update_v1/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Jane Smith's Profile</title>
+  <title>Stephen Young's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -10,46 +10,45 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Jane Smith</li>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Experience</a></li>
+          <li class="name"><a href="index.html">Stephen Young</a></li>
+          <li><a href="index.html" class="selected">Home</a></li>
+          <li><a href="experience.html">Experience</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/me.png" alt="Drawing of Jane Smith" class="profile-image">
-      <h1 class="tag name">Hello, I’m Jane.</h1>
-      <p class="tag location">My home is Portland, Oregon.</p>
+      <img src="images/stephen.jpg" alt="Stephen Young profile image" class="profile-image">
+      <h1 class="tag name">Hello, I’m Stephen Young.</h1>
+      <p class="tag location">My home for now is Boise, ID.</p>
     </header>
 
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
+        <p>I've been practicing front-end development, using Git as well as learning more about Android development and design since the start of 2015. I'm currently taking courses through Treehouse; you can learn more about Treehouse and view my accomplishments on my<a href="https://teamtreehouse.com/stephenyoung7" target="_blank"> profile</a> where I have logged over 150 hours of course work and earned more than 120 acheivements in my spare time.</p>
         <p>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</p>
-      </div> 
+      </div>
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <p>My biggest goal right now is to obtain as much experience as I can working in the field of my interest and create habits for best practices. In the meantime, I've enrolled in the front-end developer TechDegree on teamtreehouse.com and I expect to complete the program by the end of the summer of 2016. These are some of the skills included in the TechDegree:</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
-          <li>Ruby</li>
-          <li>Rails</li>
+          <li>jQuery</li>
+          <li>Gulp</li>
         </ul>
-        <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
-      </div> 
+        <p>I'm interested in earning an internship, entry-level position, or apprenticeship through remote work or with a local Boise company; I'd also appreciate working as a Customer Service rep for a technical business that will expose me to new opportunities for learning.</p>
+      </div>
 
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/stephenstaysyoung" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/stephenstaysyoung" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2015, Jane Smith</p>
+      <p class="copyright">Copyright 2016, Stephen Young</p>
     </footer>
   </body>
   </html>
