Final edits for extra credit
Corrected some spelling errors, made changes to css properties, added
download image, document, and link for .pdf resume

--- a/portfolio_update_v1/experience.html
+++ b/portfolio_update_v1/experience.html
@@ -27,7 +27,7 @@
              <ul>
                <li>Excellent communication skills through both written and verbal expression, capable of providing precise and clear instructions over the phone or providing thorough, efficient, step-by-step instructions via email</li>
                <li>Currently completing Front-End Development course on Treehouse</li>
-               <li>Revisiting and refining ability in HTML and CSS on udacity Nanodegree program, dedicating over 10hrs/week towards completion</li>
+               <li>Revisiting and refining ability in HTML and CSS on treehouse TechDegree program, dedicating over 10hrs/week towards completion</li>
                <li>Over 150 hours of coursework and learning completed on own time; maintaing balance with other life-aspects</li>
             </ul>
         </div>
@@ -38,16 +38,17 @@
                <p>Job Responsbilities</p>
                  <ul>
                    <li>Answer 60-80 calls in a day or over 120 emails responding to customer queries each month</li>
-                   <li>Reported 24 implemented UI and system changes, and drafted over 30 scheduled changes using wireframe and protoyping techniques to development team for beta Android mobile application before public release updating product version from v11 to v28</li>
-                   <li>Occassionally troubleshooting and resolving customer issues accessing our online and mobile products; and reporting issues to developer team</li>
-                   <li>Drafted Online Protoype for Preauthorization Matrix using JavaScript, HTML, and CSS for Medical Partners of PacificSource</li>
+                   <li>Reported 24 implemented UI and system changes, and drafted over 30 scheduled changes using wireframe and prototyping techniques to development team for beta Android mobile application before public release updating product version from v11 to v28</li>
+                   <li>Occasionally troubleshooting and resolving customer issues accessing our online and mobile products; and reporting issues to developer team</li>
+                   <li>Drafted online prototype for Preauthorization Matrix using JavaScript, HTML, and CSS for Medical Partners of PacificSource</li>
                  </ul>
         </div>
       </main>
     <footer>
       <ul>
         <li><a href="https://www.linkedin.com/in/stephenstaysyoung" class="social linkedin">LinkedIn</a></li>
-        <li><a href="https://github.com/stephenstaysyoung" class="social github">Github</a></li>
+        <li><a href="https://github.com/stephenstaysyoung" class="social github">GitHub</a></li>
+        <li><a href="SteYoungResume.pdf" class= "social download" download>Download My Resume</a></li>
       </ul>
       <p class="copyright">Copyright 2016, Stephen Young</p>
     </footer>
