--- a/portfolio_update_v1/index.html
+++ b/portfolio_update_v1/index.html
@@ -26,7 +26,7 @@
       <div class="card">
         <h2>Background</h2>
         <p>I've been practicing front-end development, using Git as well as learning more about Android development and design since the start of 2015. I'm currently taking courses through Treehouse; you can learn more about Treehouse and view my accomplishments on my<a href="https://teamtreehouse.com/stephenyoung7" target="_blank"> profile</a> where I have logged over 150 hours of course work and earned more than 120 acheivements in my spare time.</p>
-        <p>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</p>
+        <p>When I'm not coding I enjoy building Legos-specifically building starships-I'm also a member of the PC master race where I get my inspiration for my Lego creations. I like to do weight training and I'm a Dungeon Master for Dungeons and Dragons; 5th edition has made Dungeons and Dragons incredibly accessible for new adventurers and Dungeon Masters alike, it's by far my favorite version.</p>
       </div>
 
       <div class="card">
@@ -46,7 +46,8 @@
     <footer>
       <ul>
         <li><a href="https://www.linkedin.com/in/stephenstaysyoung" class="social linkedin">LinkedIn</a></li>
-        <li><a href="https://github.com/stephenstaysyoung" class="social github">Github</a></li>
+        <li><a href="https://github.com/stephenstaysyoung" class="social github">GitHub</a></li>
+        <li><a href="SteYoungResume.pdf" class= "social download" download>Download My Resume</a></li>
       </ul>
       <p class="copyright">Copyright 2016, Stephen Young</p>
     </footer>
