--- a/portfolio_update_v1/experience.html
+++ b/portfolio_update_v1/experience.html
@@ -12,7 +12,7 @@
         <ul class="nav">
           <li class="name"><a href="index.html">Stephen Young</a></li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="exerpeince.html" class="selected">Experience</a></li>
+          <li><a href="experience.html" class="selected">Experience</a></li>
         </ul>
     </div>
 
